Archive2/97/99c0113ce66766/output
main.cpp:3:26: error: constexpr variable 'foo' must be initialized by a constant expression
    constexpr auto foo = []{};
                         ^~~~
1 error generated.
