Archive2/97/99c0113ce66766/main.cpp
int main()
{
    constexpr auto foo = []{};
}